@@ -7,6 +7,8 @@ with respect to new features and compatibility changes.
 2016-06-18
  * Added Wing::Role::Result::Cousin, which sets up many to many relationships between classes in a Wing way.
  * Added the Rest param _include and the method param include to describe() and format_list() in Wing::Dancer so that you can arbitrarily add stuff to class describe methods.
+ * Documented the options in Wing::Rest for generate_relationship() and generate_all_relationships().
+ * Fixed a bug relating to the object prefetch created by generate_relationship().
 
 2016-06-16
  * Added privileged_params() to Wing::DB::Result.
